feat: update domino take turn