@@ -18,22 +18,22 @@ import static org.junit.jupiter.api.Assertions.*;
  * @author Toled
  */
 public class DominoGameTest {
-    
+
     public DominoGameTest() {
     }
-    
+
     @BeforeAll
     public static void setUpClass() {
     }
-    
+
     @AfterAll
     public static void tearDownClass() {
     }
-    
+
     @BeforeEach
     public void setUp() {
     }
-    
+
     @AfterEach
     public void tearDown() {
     }
@@ -265,7 +265,7 @@ public class DominoGameTest {
         );
         playersAllReady.forEach(Player::setReady);  // Establecer todos los jugadores como listos
         instanceAllReady.setPlayers(playersAllReady);
-        
+
         boolean resultAllReady = instanceAllReady.startGame();
         assertTrue(resultAllReady, "Todos los jugadores están listos, el juego debería comenzar.");
 
@@ -277,13 +277,14 @@ public class DominoGameTest {
                 new Player()
         );
         instanceNotReady.setPlayers(playersNotReady);
-        
+
         boolean resultNotReady = instanceNotReady.startGame();
         assertFalse(resultNotReady, "Al menos un jugador no está listo, el juego no debería comenzar.");
     }
 
     /**
      * Test of putTileBoard method, of class DominoGame.
+     *
      * @throws exceptions.InvalidMoveException
      */
     @Test
@@ -294,7 +295,7 @@ public class DominoGameTest {
         instance.addPlayer(new Player());
         instance.setBoard(new Board());
         instance.putTileBoard(tile);
-        BoardTile boardTile = instance.getBoard().getTiles().get(0);
+        BoardTile boardTile = instance.getBoard().getTiles().getFirst();
         assertEquals(tile.getLeftValue(), boardTile.getLeftValue());
         assertEquals(tile.getRightValue(), boardTile.getRightValue());
     }
